Fix footer padding causing horizontal scrolling

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -188,7 +188,7 @@ pre {
 .site-footer {
   margin: 4em 0 0;
   color: #e1e0f3;
-  padding: 2em 0;
+  padding: 2em 15px;
   text-align: left;
   background: #24242d; }
   .site-footer a {
